--- a/UserPerfil/UserPerfil.css
+++ b/UserPerfil/UserPerfil.css
@@ -19,102 +19,9 @@ a{
     text-decoration: none;
 }
 
-/*barra de navegación 2.0*/
-.header{
-    background-color: #84b295;
-    height: 80px;
-    border-bottom: 5px solid #428347;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-between;
-    /*justify-content: right;*/
-}
-
-.logo{
-    width: 170px;
-    object-fit: cover;
-    transition: background-color 500ms;
-    /*color:#fffaf0;*/
-    filter: invert(100%) sepia(28%) saturate(1220%) hue-rotate(345deg) brightness(170%) contrast(113%);
-}
-
-.SpBtns{
-    display: none;
-    padding: 10px 20px;
-    font-family: 'Ubuntu', sans-serif;
-    color: #f0f8ff;
-    background-color: #84b295;
-    border: 0px;
-    border-bottom: 5px solid #3d8044;
-    font-size: 20px;
-    cursor: pointer;
-}
-.SpBtns:hover{
-    background-color: #3d8044;
-}
-
-.nav-link{
-    color: #f0f8ff;
-}
-nav ul li:hover{
-    background-color: #428347;
-}
-
-#register{
-    background-color: #428347;
-}
-#register:hover{
-    background-color: #2a6b30;
-}
-
-#regSpBtns{
-    background-color: #428347;
-}
-#regSpBtns:hover{
-    background-color: #2a6b30;
-}
-
-.moveBars{
-    transform: rotate(180deg);
-    transition: all 500ms ease;
-}
-.resetBars{
-    transform: rotate(0deg);
-    transition: all 500ms ease;
-}
-
-.nav-menu{
-    display: flex;
-    list-style: none;
-}
-
-.nav-menu-item{
-    font-size: 20px;
-    padding: 10px 20px;
-    line-height: 55px;
-    width: max-content;
-    color: floralwhite;
-    cursor: pointer;
-}
-
-.nav-toggle{
-    color:floralwhite;
-    background: none;
-    border: none;
-    font-size: 30px;
-    padding: 10px 20px;
-    line-height: 60px;
-    display: none;
-    cursor: pointer;
-}
-
-.btns{
-    display: flex;
+#cart{
+    padding: 0px 20px;
+    height: 75px;
 }
 
 /*Responsive*/
@@ -271,7 +178,7 @@ nav ul li:hover{
 }
 
 .square{
-    grid-row: 1/9;
+    grid-row: 1/8;
     grid-column: 1/15;
     background: #f5deb3;
     margin: 0 20px; 
@@ -286,7 +193,15 @@ nav ul li:hover{
 }
 
 .file{
-    clip-path: circle(50.3% at 50% 50%);
+    /*clip-path: circle(50.3% at 50% 50%);
+    border: 2px solid salmon;*/
+    margin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 200px;
+    border: 5px solid salmon;
+    /*transform: translateY(50px);*/
+    box-shadow: 0 0 12px 2px rgba(0, 0, 0, .2);
 }
 
 .image{
@@ -295,6 +210,7 @@ nav ul li:hover{
     display: flex;
     flex-direction:column;
     align-items: center;
+    transform: translateY(-50px);
 }
 
 input[type="file"]{
@@ -307,10 +223,12 @@ input[type="file"]{
     height: 100%;
     opacity: 0;
     cursor: pointer;
+    transform: translateY(-20px);
 }
 
 #sendImg{
-    opacity: 0;
+    display: none;
+    cursor: default;
 }
 
 .label{
@@ -333,6 +251,7 @@ li{
 
 #username{
     font-weight: bolder;
+    font-size: 20px;
 }
 
 .userInfo{
@@ -341,6 +260,7 @@ li{
     display: flex;
     flex-direction:column;
     align-items: center;
+    transform: translateY(-80px);
 }
 
 .userInfo .a{
@@ -352,7 +272,7 @@ li{
 
 .contenido{
     margin: 20px;
-    grid-row: 8/12;
+    grid-row: 7/12;
     grid-column: 1/15;
 }
 
@@ -367,7 +287,7 @@ footer{
 .other{
     grid-row: 12/-1;
     grid-column: 1/-1;
-    background-color: floralwhite;
+    background-color: transparent;
 }
 
 .footer{
@@ -404,11 +324,11 @@ footer{
 .space{
     grid-column: 1/2;
     grid-row: 1/12;
-    background-color: floralwhite;
+    background-color: transparent;
 }
 
 .space2{
     grid-column: -2/-1;
     grid-row: 1/12;
-    background-color: floralwhite;
+    background-color: v;
 }
