--- a/AddModal/Plus.css
+++ b/AddModal/Plus.css
@@ -27,6 +27,7 @@
     color: #5A5A5A;
     padding: 10px;
     font-size: 15px; 
+    min-height: 436px;
 }
 #modal-back {       /*#modal-back  estilo del fondo */
     position: fixed;
