--- a/Menu/Menu.css
+++ b/Menu/Menu.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-a{
+body a{
     text-decoration: none;
 }
 
@@ -19,6 +19,13 @@ body{
     background-color: floralwhite;
     display: flex;
     min-height: 100vh;
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .body{
@@ -75,16 +82,15 @@ h2{
 
 /*Menú*/
 .menu{
-    display: flex;
-    flex-wrap: wrap;
-    /*­justify-content: center;
-    margin: auto;*/
+    /*display: flex;
+    flex-wrap: wrap;*/
     margin-top: 140px;
     width: 100%;
+    transform: translateY(20px);
 }
 
 .menu .card{
-    width: 100%;
+    width: 92%;
     height: 80px;
     border-radius: 20px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.527);
@@ -115,7 +121,7 @@ h2{
     top: 35px;
     cursor: pointer;
     color: #2c1507;
-    transform: translate(-200%, -180%);
+    transform: translate(-200%, -207%);
     float: right;
 }
 #add:hover{
@@ -127,10 +133,21 @@ h2{
     top: 35px;
     cursor: pointer;
     color: #2c1507;
-    transform: translate(30%, -180%);
+    transform: translate(30%, -200%);
 }
 #addCart:hover{
     color: #67432e;
+}
+
+#mc .precio{
+    width: 10%;
+}
+#mc .CB{
+    width: 5%;
+}
+
+textarea{
+    padding: 10px;
 }
 
 /*Responsive*/
@@ -145,4 +162,26 @@ h2{
     /*#liga{
         width: 100px;
     }*/
+}
+
+/*BOOTSTRAP*/
+.NAV{
+    display: flex;
+    justify-content: left;
+}
+.nav-link{
+    outline: none;
+}
+#navTab[aria-selected="true"]{
+    border-bottom: 1px solid whitesmoke;
+    background-color: whitesmoke;
+    outline: 0px;
+}
+.tab-content{
+    border-top: 1px solid rgb(223, 223, 223);
+    border-bottom: 1px solid rgb(223, 223, 223);
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: whitesmoke;
 }
