--- a/Pedido/Pedido.css
+++ b/Pedido/Pedido.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 
-a{
+body a{
     text-decoration: none;
 }
 
@@ -19,6 +19,8 @@ body{
     background-color: floralwhite;
     display: flex;
     min-height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .areas{
@@ -54,4 +56,44 @@ h2{
 
 #chat{
     color: tomato;
+}
+
+.mapa{
+    position: absolute;
+    display: flex;
+    background-color: aqua;
+    right: 20px;
+    top: 100px;
+    width: 500px;
+    max-width: 91%;
+    height: 300px;
+    max-height: 100vh;
+}
+
+/*Responsive*/
+@media screen and (max-width: 920px){
+    .mapa{
+        transform: translateY(50px);
+        height: 50vh;
+        left: 20px;
+        width: 100%;
+    }
+    .informe{
+        transform: translateY(350px);
+        width: 100%;
+    }
+}
+
+/*Responsive*/
+@media screen and (max-width: 450px){
+    .mapa{
+        transform: translateY(50px);
+        height: 80vh;
+        right: 0px;
+        width: 100%;
+    }
+    .informe{
+        transform: translateY(560px);
+        width: 100%;
+    }
 }
