--- a/Ventas/Ventas.css
+++ b/Ventas/Ventas.css
@@ -51,3 +51,46 @@ h2{
     padding: 5px;
     padding-left: 0;
 }
+
+#chat{
+    color: tomato;
+}
+
+.mapa{
+    position: absolute;
+    display: flex;
+    right: 20px;
+    top: 100px;
+    width: 500px;
+    max-width: 91%;
+    height: 300px;
+    max-height: 100vh;
+}
+
+/*Responsive*/
+@media screen and (max-width: 920px){
+    .mapa{
+        transform: translateY(50px);
+        height: 50vh;
+        left: 20px;
+        width: 100%;
+    }
+    .informe{
+        transform: translateY(350px);
+        width: 100%;
+    }
+}
+
+/*Responsive*/
+@media screen and (max-width: 450px){
+    .mapa{
+        transform: translateY(50px);
+        height: 80vh;
+        right: 0px;
+        width: 100%;
+    }
+    .informe{
+        transform: translateY(560px);
+        width: 100%;
+    }
+}
