--- a/Pedido/Pedido.css
+++ b/Pedido/Pedido.css
@@ -84,6 +84,12 @@ h2{
 }
 
 /*Responsive*/
+@media screen and (max-width: 920px){
+    .informe{
+        transform: translateY(450px);
+        width: 100%;
+    }
+}
 @media screen and (max-width: 450px){
     .mapa{
         transform: translateY(50px);
@@ -92,7 +98,7 @@ h2{
         width: 100%;
     }
     .informe{
-        transform: translateY(560px);
+        transform: translateY(720px);
         width: 100%;
     }
 }
