--- a/Producto/Producto.css
+++ b/Producto/Producto.css
@@ -298,6 +298,32 @@ nav ul li:hover{
     width: auto;
     /*transform: translate(0, 100px);*/
 }
+.carousel-inner{
+    width: 199px;
+}
+
+.carousel-item:hover{
+    filter: blur(5px);
+    cursor: pointer;
+}
+
+.change{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.54);
+    width: 199px;
+    height: 199px;
+    top: 0;
+}
+
+.change .cruz{
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 50%;
+    transform: translate(0, -50%);
+    font-size: 45px;
+}
 
 #productName{
     font-size: 3vh;
@@ -324,7 +350,7 @@ nav ul li:hover{
     font-size: 30px;
     float: right;
     position: relative;
-    top: -155px;
+    top: -125px;
     cursor: pointer;
     color: #2c1507;
 }
@@ -335,7 +361,7 @@ nav ul li:hover{
     font-size: 30px;
     float: right;
     position: relative;
-    top: 5px;
+    top: 45px;
     right: -32px;
     cursor: pointer;
     color: #2c1507;
