--- a/Pedido/Pedido.css
+++ b/Pedido/Pedido.css
@@ -91,6 +91,26 @@ div.valoracion input:checked ~ label {
     color: #fd4;
     text-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
 }
+
+.Pp{
+    border-radius: 13px;
+    border: 1px solid rgba(149, 149, 149, 0.549);
+    width: 95%;
+    /*width: 15%;*/
+    margin: auto auto;
+}
+
+.PpBorder{
+    width: 17%;
+    background-color: rgb(255, 193, 0);
+    height: auto;
+    display: flex;
+    justify-content: center;
+    height: 90px;
+    border-radius: 13px;
+    box-shadow: 0px 2px 2px rgb(210, 159, 0);
+}
+
 /*Responsive*/
 @media screen and (max-width: 920px){
     .mapa{
