--- a/Pedido/Pedido.css
+++ b/Pedido/Pedido.css
@@ -95,13 +95,12 @@ div.valoracion input:checked ~ label {
 .Pp{
     border-radius: 13px;
     border: 1px solid rgba(149, 149, 149, 0.549);
-    width: 95%;
-    /*width: 15%;*/
+    width: 193px;/*95%*/
     margin: auto auto;
 }
 
 .PpBorder{
-    width: 17%;
+    width: 210px;/*17%*/
     background-color: rgb(255, 193, 0);
     height: auto;
     display: flex;
@@ -109,6 +108,7 @@ div.valoracion input:checked ~ label {
     height: 90px;
     border-radius: 13px;
     box-shadow: 0px 2px 2px rgb(210, 159, 0);
+    margin-bottom: 50px;
 }
 
 /*Responsive*/
