--- a/ListN/ListN.css
+++ b/ListN/ListN.css
@@ -377,6 +377,15 @@ h1{
     display: none;
 }
 
+.null{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: rgba(44, 21, 7, 0.3);
+}
+
 .other{
     grid-row: 12/-1;
     grid-column: 1/-1;
