--- a/Producto/Producto.css
+++ b/Producto/Producto.css
@@ -410,7 +410,7 @@ nav ul li:hover{
     font-size: 30px;
     float: right;
     position: relative;
-    top: -145px;
+    top: -180px;
     cursor: pointer;
     color: #2c1507;
 }
@@ -421,7 +421,7 @@ nav ul li:hover{
     font-size: 30px;
     float: right;
     position: relative;
-    top: 25px;
+    top: -25px;
     right: -32px;
     cursor: pointer;
     color: #2c1507;
@@ -728,4 +728,19 @@ div.valoracion input:checked ~ label {
     grid-column: -2/-1;
     grid-row: 1/-1;
     background-color: floralwhite;
+}
+
+.stars label{
+    transform: translate(-325px, 10px);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.stars button{
+    transform: translate(180px, 13px);
+    padding: 2px 7px;
+    border: none;
+    border-radius: 15px;
+    background-color: rgba(218, 165, 32, 0.591);
+    color: floralwhite;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
 }
